--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
             <p class="text-sm">
               Subscribe now to receive tips on how to take your business to the next level.
             </p>
-            <form>
+            <form name="contact" netlify>
               <input type="email" id="email" placeholder="Enter your Email">
               <button type="submit" class="btn btn-primary btn-block">Subscribe</button>
             </form>
