Added autocomplete attribute to input inside form

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
               Subscribe now to receive tips on how to take your business to the next level.
             </p>
             <form name="contact" netlify>
-              <input type="email" id="email" placeholder="Enter your Email">
+              <input type="email" id="email" placeholder="Enter your Email" autocomplete="off">
               <button type="submit" class="btn btn-primary btn-block">Subscribe</button>
             </form>
           </div>
